--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://media.istockphoto.com/vectors/brain-concept-isolated-line-vector-illustration-editable-icon-vector-id854297668?b=1&k=20&m=854297668&s=170667a&w=0&h=gzlX-sY8WcVoLjjtRscOOloer58tOaRLTmotyjWC_H0=" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -17,7 +17,7 @@
       Only files inside the `public` folder can be referenced from the HTML.
 
 
-      
+
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
