--- a/public/index.html
+++ b/public/index.html
@@ -2,28 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://media.istockphoto.com/vectors/brain-concept-isolated-line-vector-illustration-editable-icon-vector-id854297668?b=1&k=20&m=854297668&s=170667a&w=0&h=gzlX-sY8WcVoLjjtRscOOloer58tOaRLTmotyjWC_H0=" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-<link rel="shortcut icon"
-  href="https://media.istockphoto.com/vectors/brain-concept-isolated-line-vector-illustration-editable-icon-vector-id854297668?b=1&k=20&m=854297668&s=170667a&w=0&h=gzlX-sY8WcVoLjjtRscOOloer58tOaRLTmotyjWC_H0=">
-<!--
-      Notice the use of %PUBLIC_URL% in the tag above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
 
-
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-<title>OneVitals.IO</title>
+    <title>OneVitals.IO</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
