add google seach tag

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
+<meta name="google-site-verification" content="ft_sQ21OvF8l_oxn1i_AetpYF4vRAeD82ImG-9rOcIM" />
 
     <title>OneVitals.IO</title>
   </head>
