--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- kj;oainfv;enfv;env;ejnqv;qe-->
     <div id="root"></div>
 
   </body>
